Capitalize route table header in DLR list

--- a/app/views/action_smser/delivery_reports/list.html.erb
+++ b/app/views/action_smser/delivery_reports/list.html.erb
@@ -21,7 +21,7 @@ offset = 0 if offset < -0
     <th><%= t('id') %></th>
     <th><%= t('created_at') %></th>
     <th><%= t('msg_id') %></th>
-    <th><%= t('route') %></th>
+    <th><%= t('route').capitalize %></th>
     <th><%= t('status') %></th>
     <th><%= t('status_updated_at') %></th>
     <th><%= t('recipient') %></th>
