--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -1,11 +1,12 @@
 <%= form_for(@single_message) do |f| %>
   <% if @single_message.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@single_message.errors.count, "error") %> prohibited this single_message from being saved:</h2>
+      <h2><%= raw t('errors.template.header', count: @single_message.errors.count, model: t('activerecord.models.single_message'))  %></h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @single_message.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <li><%= raw msg %></li>
       <% end %>
       </ul>
     </div>
