--- a/app/views/bulk_messages/_form.html.erb
+++ b/app/views/bulk_messages/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@bulk_message) do |f| %>
   <% if @bulk_message.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@bulk_message.errors.count, "error") %> prohibited this bulk_message from being saved:</h2>
+      <h2><%= raw t('errors.template.header', count: @bulk_message.errors.count, model: t('activerecord.models.bulk_message')) %></h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @bulk_message.errors.full_messages.each do |msg| %>
