--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for(@list, :html => { :multipart => true }) do |f| %>
   <% if @list.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@list.errors.count, "error") %> prohibited this list from being saved:</h2>
+      <h2><%= raw t('errors.template.header', count: @list.errors.count, model: t('activerecord.models.list')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @list.errors.full_messages.each do |msg| %>
