--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@contact) do |f| %>
   <% if @contact.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+      <h2>
+        <%= raw t('errors.template.header', count: @contact.errors.count, model: t('activerecord.models.contact')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @contact.errors.full_messages.each do |msg| %>
