--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@credit) do |f| %>
   <% if @credit.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@credit.errors.count, "error") %> prohibited this credit from being saved:</h2>
+      <h2>
+        <%= raw t('errors.template.header', count: @credit.errors.count, model: t('activerecord.models.credit')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @credit.errors.full_messages.each do |msg| %>
