Fix create credit btn text

--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -30,6 +30,6 @@
     %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t(:create_item, item: t('activerecord.models.credit')).html_safe %>
   </div>
 <% end %>
