--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@route) do |f| %>
   <% if @route.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@route.errors.count, "error") %> prohibited this route from being saved:</h2>
+      <h2>
+        <%= raw t('errors.template.header', count: @route.errors.count, model: t('activerecord.models.route')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @route.errors.full_messages.each do |msg| %>
@@ -32,6 +35,6 @@
     %>
   </fieldset>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t(:create_item, item: t('activerecord.models.route')) %>
   </div>
 <% end %>
