--- a/app/views/gateways/_form.html.erb
+++ b/app/views/gateways/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@gateway) do |f| %>
   <% if @gateway.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@gateway.errors.count, "error") %> prohibited this gateway from being saved:</h2>
+      <h2>
+        <%= raw t('errors.template.header', count: @gateway.errors.count, model: t('activerecord.models.gateway')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @gateway.errors.full_messages.each do |msg| %>
