I18n for Groups views

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing groups</h1>
+<h1><%=t('activerecord.models.group').pluralize %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th><%=t(:name)%></th>
       <th></th>
       <th></th>
       <th></th>
@@ -14,9 +14,9 @@
     <% @groups.each do |group| %>
       <tr>
         <td><%= group.name %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('show'), group %></td>
+        <td><%= link_to t('edit'), edit_group_path(group) %></td>
+        <td><%= link_to t('destroy'), group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Group', new_group_path %>
+<%= link_to t(:new_item, item: t('activerecord.models.group')), new_group_path %>
