--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@group) do |f| %>
   <% if @group.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@group.errors.count, "error") %> prohibited this group from being saved:</h2>
+      <h2>
+        <%= raw t('errors.template.header', count: @group.errors.count, model: t('activerecord.models.group')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @group.errors.full_messages.each do |msg| %>
@@ -12,11 +15,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label t(:name) %><br>
     <%= f.text_field :name %>
   </div>
   <fieldset>
-    <legend>Contacts</legend>
+    <legend><%= t('activerecord.models.contact').pluralize %></legend>
     <%= f.select :contacts,
       options_for_select(current_user.contacts, @group.contacts),
       {},
@@ -24,6 +27,6 @@
     %>
   </fieldset>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t(:create_item, item: t('activerecord.models.group'))%>
   </div>
 <% end %>
