--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New group</h1>
+<h1><%= t(:new_item_f, item: t('activerecord.models.group'))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', groups_path %>
+<%= link_to t(:back).html_safe, groups_path %>
