Gateways link to admin

--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -1,3 +1,4 @@
 <%= link_to t('credits').html_safe, main_app.credits_path %>
 <%= link_to t('routes').capitalize, main_app.routes_path %>
+<%= link_to t('gateways'), main_app.gateways_path %>
 <%= link_to t('user').pluralize, main_app.users_path %>
