--- a/app/views/debits/_form.html.erb
+++ b/app/views/debits/_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_for(@debit) do |f| %>
   <% if @debit.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@debit.errors.count, "error") %> prohibited this debit from being saved:</h2>
+      <h2>
+        <%= raw t('errors.template.header', count: @credit.errors.count, model: t('activerecord.models.debit')) %>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @debit.errors.full_messages.each do |msg| %>
@@ -12,7 +15,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user %><br>
+    <%= f.label t(:user) %><br>
     <%= f.text_field :user %>
   </div>
   <div class="field">
@@ -20,6 +23,6 @@
     <%= f.text_field :balance %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t(:create_item, item: t('activerecord.models.debit')).html_safe %>
   </div>
 <% end %>
