--- a/app/views/debits/edit.html.erb
+++ b/app/views/debits/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing debit</h1>
+<h1> <%= t(:editing, item: t('activerecord.models.debit'))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @debit %> |
-<%= link_to 'Back', debits_path %>
+<%= link_to t(:show), @debit %> |
+<%= link_to t(:back).html_safe, debits_path %>
