--- a/app/views/debits/new.html.erb
+++ b/app/views/debits/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New debit</h1>
+<h1><%= t(:new_item, item: t('activerecord.models.debit'))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', debits_path %>
+<%= link_to t(:back).html_safe, debits_path %>
