--- a/app/views/debits/show.html.erb
+++ b/app/views/debits/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-    <strong><%=t(:date)%>:</strong>
+    <strong><%=t(:date_field)%>:</strong>
     <%= I18n.localize( @debit.created_at, format: :date_time)%>
 </p>
 
