--- a/app/views/action_smser/delivery_reports/list.html.erb
+++ b/app/views/action_smser/delivery_reports/list.html.erb
@@ -38,7 +38,7 @@ offset = 0 if offset < -0
     <td><%= ActionSmserUtils.show_dlr_status(delivery_report.status)%></td>
     <td style="white-space: nowrap;"><%= I18n.localize(delivery_report.status_updated_at, :format => :date_time).html_safe %></td>
     <td><%= delivery_report.to %></td>
-    <td><%= delivery_report.sms_type %></td>
+    <td><%= SmsHelper.sms_type( delivery_report.sms_type) %></td>
     <td title="<%= delivery_report.body %>">&nbsp;O</td>
   </tr>
 <% end %>
