--- a/app/views/observers/index.html.erb
+++ b/app/views/observers/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing observers</h1>
+<h1><%= t('activerecord.models.observer').pluralize %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Number</th>
-      <th>Active</th>
+      <th><%= Observer.human_attribute_name("number") %></th>
+      <th><%= Observer.human_attribute_name("active") %></th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= observer.number %></td>
         <td><%= observer.active %></td>
-        <td><%= link_to 'Show', observer %></td>
-        <td><%= link_to 'Edit', edit_observer_path(observer) %></td>
-        <td><%= link_to 'Destroy', observer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t(:show), observer %></td>
+        <td><%= link_to t(:edit), edit_observer_path(observer) %></td>
+        <td><%= link_to t(:destroy), observer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Observer', new_observer_path %>
+<%= link_to t(:new_item, item: t('activerecord.models.observer')), new_observer_path %>
