--- a/app/views/observers/edit.html.erb
+++ b/app/views/observers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing observer</h1>
+<h1><%= t(:editing, item: Observer.model_name.human)%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @observer %> |
-<%= link_to 'Back', observers_path %>
+<%= link_to t(:show), @observer %> |
+<%= link_to t(:back).html_safe, observers_path %>
