--- a/app/views/observers/new.html.erb
+++ b/app/views/observers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New observer</h1>
+<h1><%= t(:new_item, item: t('activerecord.models.observer')) %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', observers_path %>
+<%= link_to t(:back).html_safe, observers_path %>
