Remove text from submit btn

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -27,6 +27,6 @@
     %>
   </fieldset>
   <div class="actions">
-    <%= f.submit t(:create_item, item: t('activerecord.models.group'))%>
+    <%= f.submit %>
   </div>
 <% end %>
