--- a/app/views/debits/_form.html.erb
+++ b/app/views/debits/_form.html.erb
@@ -23,6 +23,6 @@
     <%= f.text_field :balance %>
   </div>
   <div class="actions">
-    <%= f.submit t(:create_item, item: t('activerecord.models.debit')).html_safe %>
+    <%= f.submit %>
   </div>
 <% end %>
