--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -31,6 +31,6 @@
     %>
   </fieldset>
   <div class="actions">
-    <%= f.submit t(:create_item, item: t(:lists).singularize) %>
+    <%= f.submit %>
   </div>
 <% end %>
