--- a/app/views/observers/_form.html.erb
+++ b/app/views/observers/_form.html.erb
@@ -22,6 +22,6 @@
     <%= f.check_box :active %>
   </div>
   <div class="actions">
-    <%= f.submit t(:create_item, item: Observer.model_name.human) %>
+    <%= f.submit %>
   </div>
 <% end %>
