--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -35,6 +35,6 @@
     %>
   </fieldset>
   <div class="actions">
-    <%= f.submit t(:create_item, item: t('activerecord.models.route')) %>
+    <%= f.submit %>
   </div>
 <% end %>
