--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong><%= t('activerecord.models.system_route') %>:</strong>
+  <%= @route.system_route %>
+</p>
+
+<p>
   <strong><%= t('user') %>:</strong>
   <%= @route.user %>
 </p>
