--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= user.balance %></td>
         <td><%= user.spent %></td>
         <td><%= user.created_at %></td>
-        <td><%= link_to t('destroy'), cancel_user_path(user), method: :delete, data: { confirm: t('sure').html_safe } %></td>
+        <td><%= link_to t('destroy'), user, method: :delete, data: { confirm: t('sure').html_safe } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,6 +27,6 @@
 <p><%= will_paginate @lists %></p>
 
 <% if current_user.admin %>
-  <%= link_to t('new_user').html_safe, new_user_registration_path %>
+  <%= link_to t('new_user').html_safe, new_user_path %>
 <% end %>
 
