--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
   <div class="field">
+    <%= t('max_debt').html_safe %><br>
+    <%= f.text_field :max_debt %>
+  </div>
+  <div class="field">
     <%= f.check_box :admin %>
     <%= f.label :admin %>?
   </div>
