--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,9 @@
   <%= @user.balance %>
 </p>
 
+<p>
+  <strong><%= t('max_debt').html_safe %>:</strong>
+  <%= @user.max_debt %>
+</p>
 <%= link_to t('edit'), edit_user_path(@user) %> |
 <%= link_to t('back').html_safe, users_path %>
