--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,5 +14,11 @@
   <strong><%= t('max_debt').html_safe %>:</strong>
   <%= @user.max_debt %>
 </p>
+
+<p>
+  <strong><%= t('admin') %>:</strong>
+  <%= @user.admin %>
+</p>
+
 <%= link_to t('edit'), edit_user_path(@user) %> |
 <%= link_to t('back').html_safe, users_path %>
