Fix Observer number I18n

--- a/app/views/observers/_form.html.erb
+++ b/app/views/observers/_form.html.erb
@@ -14,7 +14,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :number %><br>
+    <%= f.label :number, Observer.human_attribute_name("number").html_safe %><br>
     <%= f.text_field :number %>
   </div>
   <div class="field">
