--- a/app/views/observers/index.html.erb
+++ b/app/views/observers/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th><%= Observer.human_attribute_name("number") %></th>
+      <th><%= Observer.human_attribute_name("number").html_safe %></th>
       <th><%= Observer.human_attribute_name("active") %></th>
       <th></th>
       <th></th>
