--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -15,11 +15,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t('name') %><br>
+    <%= f.label :name, t('name') %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label t('price') %><br>
+    <%= f.label :price, t('price') %><br>
     <%= f.text_field :price %>
   </div>
   <div class="field">
