--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t(:recipient).capitalize %><br>
+    <%= f.label :number, SingleMessage.human_attribute_name("number")%><br>
     <%= f.text_field :number %>
   </div>
 
