--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -15,12 +15,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name, Contact.human_attribute_name("name") %><br>
     <%= f.text_field :name %>
   </div>
   <% if @contact.gsm_numbers and not @contact.gsm_numbers.empty? %>
     <fieldset>
-      <legend>GSM numbers</legend>
+      <legend><%= t(:gsm_numbers).html_safe %></legend>
       <%= select_tag :gsm_numbers,
         options_from_collection_for_select(@contact.gsm_numbers, "id", "number"),
         {:multiple => true, :disabled => true, :size => 2}
