--- a/app/views/debits/index.html.erb
+++ b/app/views/debits/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th><%= t(:user)%></th>
-      <th><%= t(:balance)%></th>
+      <th><%= Debit.human_attribute_name("user") %></th>
+      <th><%= Debit.human_attribute_name("balance") %></th>
       <th></th>
     </tr>
   </thead>
