--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t(:name) %><br>
+    <%= f.label :name,  t(:name) %><br>
     <%= f.text_field :name %>
   </div>
   <fieldset>
