--- a/app/views/debits/_form.html.erb
+++ b/app/views/debits/_form.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t(:user) %><br>
+    <%= f.label :user, User.model_name.human %><br>
     <%= f.text_field :user %>
   </div>
   <div class="field">
