--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -14,7 +14,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t(:name) %><br>
+    <%= f.label :name, List.human_attribute_name("name") %><br>
     <%= f.text_field :name %>
   </div>
   <fieldset>
@@ -24,7 +24,7 @@
       <%= label_tag :remove %>
   </fieldset>
   <fieldset>
-    <legend><%= t(:gsm_numbers).html_safe%></legend>
+    <legend><%= t(:gsm_numbers).html_safe %></legend>
     <%= select_tag :gsm_numbers,
       options_from_collection_for_select(@list.gsm_numbers, "id", "number"),
       {:multiple => true, :size => 5}
