--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th><%= t(:name).capitalize %></th>
-      <th><%= t(:recipient).pluralize.capitalize %></th>
+      <th><%= List.human_attribute_name("name") %></th>
+      <th><%= SingleMessage.human_attribute_name("number").pluralize %></th>
       <th></th>
       <th></th>
       <th></th>
