--- a/app/views/messages/_message_options.html.erb
+++ b/app/views/messages/_message_options.html.erb
@@ -1,7 +1,7 @@
 <fieldset>
   <legend><%= t(:sending_options).capitalize.html_safe%></legend>
   <div class="field">
-    <%= f.label  t(:route) %>:
+    <%= f.label :route, t("activerecord.models.route") %>:
     <%= f.select :route_id,
       options_from_collection_for_select(current_user.routes, "id", "name")
     %>
