--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -15,7 +15,7 @@
     <% @lists.each do |list| %>
       <tr>
         <td><%= link_to list.name, new_bulk_message_path(:list_ids => [list.id]) %></td>
-        <td><%= list.gsm_numbers.count %></td>
+        <td><%= list.receivers.count %></td>
         <td><%= link_to t('show'), list %></td>
         <td><%= link_to t('edit'), edit_list_path(list) %></td>
         <td><%= link_to t('destroy'), list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
