--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -4,3 +4,4 @@
 <%= link_to t('gateways'), main_app.gateways_path %>
 <%= link_to t('user').pluralize, main_app.users_path %>
 <%= link_to t('activerecord.models.observer').pluralize, main_app.observers_path %>
+<%= link_to t(:jobs), main_app.delayed_web_path%>
