--- a/app/views/layouts/delayed/web/application.html.erb
+++ b/app/views/layouts/delayed/web/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
-    <title>Sms</title>
+    <title><%= title "Sms"%></title>
     <%= stylesheet_link_tag 'delayed/web/application' %>
     <%= csrf_meta_tags %>
   </head>
