--- a/app/views/delayed/web/jobs/index.html.erb
+++ b/app/views/delayed/web/jobs/index.html.erb
@@ -23,7 +23,7 @@
           <td><%= link_to "##{job.id}", job_path(job) %></td>
           <td>
             <span class="<%= status_dom_class(job.status) %>">
-              <%= job.status.capitalize %>
+              <%= t("delayed/web.status.#{job.status}").html_safe %>
             </span>
           </td>
           <td> <%= I18n.localize(job.created_at, :format => :date_time).html_safe %></td>
@@ -43,7 +43,7 @@
     <% else %>
       <tr>
         <td colspan="7">
-          An empty queue is a good queue.
+          <%=t(:good_queue)%>
         </td>
       </tr>
     <% end %>
