--- a/app/views/layouts/delayed/web/application.html.erb
+++ b/app/views/layouts/delayed/web/application.html.erb
@@ -11,9 +11,7 @@
           <div class="navbar-inner">
             <%= link_to t(:home), "/#{I18n.locale}", :class => "brand" %>
             <ul class="nav">
-              <li>
-                <%= link_to t(:back).html_safe, :back %>
-              </li>
+              <%= render '/top_menu_list'%>
             </ul>
           </div>
         </nav>
