--- a/app/views/layouts/delayed/web/application.html.erb
+++ b/app/views/layouts/delayed/web/application.html.erb
@@ -2,17 +2,30 @@
 <html lang="<%= I18n.locale %>">
   <head>
     <title><%= title "Sms"%></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'delayed/web/application' %>
+    <%= stylesheet_link_tag 'delayed/bootstrap-responsive.min' %>
+    <%= javascript_include_tag 'jquery' %>
+    <%= javascript_include_tag 'delayed/bootstrap.min' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
       <% if current_user %>
         <nav class="navbar" role="navigation">
           <div class="navbar-inner">
-            <%= link_to t(:home), "/#{I18n.locale}", :class => "brand" %>
-            <ul class="nav">
-              <%= render '/top_menu_list'%>
-            </ul>
+            <div class="container">
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+              <%= link_to t(:home), "/#{I18n.locale}", :class => "brand" %>
+              <div class="nav-collapse collapse">
+                <ul class="nav">
+                  <%= render '/top_menu_list'%>
+                </ul>
+              </div>
+            </div>
           </div>
         </nav>
       <% end %>
