--- a/app/views/layouts/delayed/web/application.html.erb
+++ b/app/views/layouts/delayed/web/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
       <% if current_user %>
-        <nav class="navbar" role="navigation">
+        <nav class="navbar navbar-static-top" role="navigation">
           <div class="navbar-inner">
             <div class="container">
               <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
