Fix empty queue translation

--- a/app/views/delayed/web/jobs/index.html.erb
+++ b/app/views/delayed/web/jobs/index.html.erb
@@ -43,7 +43,7 @@
     <% else %>
       <tr>
         <td colspan="7">
-          <%=t(:good_queue)%>
+          <%=t('delayed/web.good_queue').html_safe%>
         </td>
       </tr>
     <% end %>
