--- a/app/views/layouts/delayed/web/application.html.erb
+++ b/app/views/layouts/delayed/web/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'delayed/web/application' %>
     <%= stylesheet_link_tag 'delayed/bootstrap-responsive.min' %>
-    <%= javascript_include_tag 'jquery' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'delayed/bootstrap.min' %>
     <%= csrf_meta_tags %>
   </head>
