--- a/app/views/action_smser/delivery_reports/index.html.erb
+++ b/app/views/action_smser/delivery_reports/index.html.erb
@@ -15,6 +15,8 @@
       2.month.ago.at_beginning_of_month..2.month.ago.at_end_of_month
     when 'last 24 hours'
       1.day.ago..Time.current
+    when 'last hour'
+      1.hour.ago..Time.current
     when /^(\d\d)-(\d\d) hours/
       $1.to_i.hours.ago..$2.to_i.hours.ago
     else
@@ -47,7 +49,7 @@
 
 <p class="selection_links">
   <strong><%= t('show_summary').html_safe %>:</strong>
-  <% {t('last_24h').html_safe => 'Last 24 hours', t('2_days').html_safe =>'48-24 hours', t('3_days').html_safe =>'72-48 hours', t('4_days').html_safe =>'96-72 hours ago', t('last_week').html_safe =>'Last week', t('week_before').html_safe =>'Week before that', t('30_days').html_safe =>'Last 30 days', t('this_month').html_safe =>'This month', t('1_month').html_safe =>'1 month ago', t('2_month').html_safe =>'2 months ago'}.each do |key,value| %>
+  <% {t('last_hour').html_safe => 'Last hour', t('last_24h').html_safe => 'Last 24 hours', t('2_days').html_safe =>'48-24 hours', t('3_days').html_safe =>'72-48 hours', t('4_days').html_safe =>'96-72 hours ago', t('last_week').html_safe =>'Last week', t('week_before').html_safe =>'Week before that', t('30_days').html_safe =>'Last 30 days', t('this_month').html_safe =>'This month', t('1_month').html_safe =>'1 month ago', t('2_month').html_safe =>'2 months ago'}.each do |key,value| %>
     <%= link_to key, dr_summary_url(:time_span => value), :class => (value == params['time_span'] ? 'selected' : 'not_selected') %>
   <% end %>
 </p>
