--- a/app/views/_top_menu_list.html.erb
+++ b/app/views/_top_menu_list.html.erb
@@ -8,10 +8,10 @@
     <%= link_to t('lists'), main_app.lists_path %>
   </li>
   <li>
-    <%= link_to t('summary'), main_app.delivery_reports_path -%>
+    <%= link_to t('summary'), main_app.summary_delivery_reports_path -%>
   </li>
   <li>
-    <%= link_to t('all_sms'), main_app.list_delivery_reports_path %>
+    <%= link_to t('all_sms'), main_app.delivery_reports_path %>
   </li>
   <% if current_user and current_user.admin%>
       <%= render '/admin_links_list' %>
