--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -34,6 +34,10 @@
     <%= f.check_box :admin %>
     <%= f.label :admin %>?
   </div>
+  <div class="field">
+    <%= f.label :locale %><br>
+    <%= f.collection_select :locale, I18n.available_locales, :to_s, :capitalize %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
