Topup number i18n on index

--- a/app/views/topups/index.html.erb
+++ b/app/views/topups/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th><%= Topup.human_attribute_name("number") %></th>
+      <th><%= Topup.human_attribute_name("number").html_safe %></th>
       <th><%= Topup.human_attribute_name("amount") %></th>
       <th></th>
     </tr>
