--- a/app/views/topups/new.html.erb
+++ b/app/views/topups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New topup</h1>
+<h1> <%= t(:new_item_f, item: t('topup')) %> </h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', topups_path %>
+<%= link_to t(:back).html_safe, topups_path %>
