--- a/app/views/topups/_form.html.erb
+++ b/app/views/topups/_form.html.erb
@@ -1,11 +1,15 @@
 <%= form_for(@topup) do |f| %>
   <% if @topup.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@topup.errors.count, "error") %> prohibited this topup from being saved:</h2>
+      <h2> <%= raw t('errors.template.header',
+                count: @topup.errors.count,
+                model: Topup.model_name.human)%>
+      </h2>
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @topup.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <li><%= raw msg %></li>
       <% end %>
       </ul>
     </div>
