--- a/app/views/topups/new.html.erb
+++ b/app/views/topups/new.html.erb
@@ -1,4 +1,4 @@
-<h1> <%= t(:new_item_f, item: t('topup')) %> </h1>
+<h1> <%= t(:new_item_f, item: Topup.model_name.human) %> </h1>
 
 <%= render 'form' %>
 
